[gd_scene load_steps=3 format=3 uid="uid://b8t2vqmevv3nx"]

[ext_resource type="Script" uid="uid://kods6qiigrig" path="res://scenes/ui/discard_unit_ui.gd" id="1_pxwo7"]
[ext_resource type="PackedScene" uid="uid://0ek8bcdoiphi" path="res://scenes/ui/party_ui.tscn" id="2_02t3w"]

[node name="DiscardUnitUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pxwo7")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(300, 230)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -134.0
offset_right = 150.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 16
text = "Select A Unit To Send To The Great Recycling Depot In The Sky"
horizontal_alignment = 1
autowrap_mode = 2

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="PartyUI" parent="PanelContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_02t3w")]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="CancelLabel" type="Label" parent="PanelContainer/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Press [esc] to cancel"
